--- a/event/templates/event/detail.html
+++ b/event/templates/event/detail.html
@@ -13,12 +13,7 @@
         {% for question in event.question_set.all %}
             {{ question.question_content }}
             <input type="text" id = "question{{ forloop.counter }}" name="question" value="{{ question.id }}"/>
-       <label for="question{{ forloop.counter }}">
-               {% if question.is_favorite %}
-                   <img src="http://i.imgur.com/b9b13Rd.png" />
-               {% endif %}
-       </label><br>
         {% endfor %}
-        <input type ="submit" value="Favorite">
+        <input type ="submit" value="Submit">
     </form>
 {% endblock %}
