--- a/rsvp/templates/users/realuser.html
+++ b/rsvp/templates/users/realuser.html
@@ -17,6 +17,9 @@
       <div class="container">
 	<div class="flex-center">
 	  <div class="unit-1-2 unit-1-on-mobile">
+      <div class="flex-center top-gap text-small">
+        <p>{{user_info.username}}</p>
+      </div>
 	  	<div class="flex-center top-gap text-small">
 	      <a href="/event/user/?p1={{user_info.id}}">my event</a>
 	    </div>
