--- a/rsvp/templates/event/addOption.html
+++ b/rsvp/templates/event/addOption.html
@@ -14,9 +14,9 @@
   </head>
 
   <body>
-     <form action='/event/addoptionA/?p1={{event_info.id}}&p2={{question.id}}&p3={{ question.Choice.index(option) }}' method="post">
+     <form action='/event/addoptionA/?p1={{event_info.id}}&p2={{question.id}}&p3={{ option.id }}' method="post">
      {% csrf_token %}
-            Option: <input type="text" name="option" value="{{ option }}"><br>
+            Option: <input type="text" name="option" value="{{ option.option_content }}"><br>
         <input type ="submit" value="Submit"><br>
      </form>
   </body>
