--- a/rsvp/templates/event/event_detail_vendor.html
+++ b/rsvp/templates/event/event_detail_vendor.html
@@ -8,7 +8,7 @@
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="js/bootstrap.min.js"></script>
    </head>
-   <body>
+<body>
    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
    <div class="container-fluid">
     <div class="navbar-header">
@@ -17,7 +17,7 @@
     {% if user.is_authenticated %}
       <div>
       <ul class="nav navbar-nav navbar-right">
-         <li><a href="users/realuser">{{user.username}}</a></li>
+         <li><a href="/users/realuser">{{user.username}}</a></li>
          <li><a href="{% url 'logout' %}?next={{request.path}}">Logout</a></li>
       </ul>
     </div>
@@ -31,5 +31,51 @@
     {% endif %}
    </div>
    </nav>
-   </body>
+   <br>
+   <br>
+   <br>
+   <div class="panel panel-default">
+	<div class="panel-heading">{{event_info.event_title}}</div>
+	<table class="table">
+		<tr><td>event time</td><td>{{event_info.time}}</td></tr>
+		<tr><td>event place</td><td>{{event_info.place}}</td></tr>
+		<tr><td>event information</td><td>{{event_info.infor}}</td></tr>
+	</table>
+</div>
+   <br>
+   <br>
+   <br>
+<div class="panel panel-default">
+<div class="panel-heading">All Answer</div>
+<table class='table'>
+{% for list in sl %}
+<tr>
+{% for elem in list %}
+<td>
+{{elem}}
+</td>
+{% endfor %}
+</tr>
+{% endfor%}
+{% for list in ml %}
+<tr>
+{% for elem in list %}
+<td>
+{{elem}}
+</td>
+{% endfor %}
+</tr>
+{% endfor%}
+{% for list in tl %}
+<tr>
+{% for elem in list %}
+<td>
+{{elem}}
+</td>
+{% endfor %}
+</tr>
+{% endfor%}
+</table>
+</div>
+</body>
 </html>
