--- a/rsvp/templates/index.html
+++ b/rsvp/templates/index.html
@@ -6,7 +6,6 @@
       <!-- Import Bootstrap -->
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
       <script src="https://code.jquery.com/jquery.js"></script>
-      <script src="js/bootstrap.min.js"></script>
    </head>
    <body>
    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -31,5 +30,12 @@
     {% endif %}
    </div>
    </nav>
+   <div>
+   <br>
+   <br>
+   <br>
+   <h3>test</h3>
+   <img src= "logo.png">
+   </div>
    </body>
 </html>
