--- a/rsvp/templates/index.html
+++ b/rsvp/templates/index.html
@@ -30,12 +30,8 @@
     {% endif %}
    </div>
    </nav>
-   <div>
-   <br>
-   <br>
-   <br>
-   <h3>test</h3>
-   <img src= "logo.png">
+   <div class="container-fluid">
+   <img src= "/users/static/logo.png" >
    </div>
    </body>
 </html>
