--- a/rsvp/templates/index.html
+++ b/rsvp/templates/index.html
@@ -30,8 +30,14 @@
     {% endif %}
    </div>
    </nav>
+   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
    <div class="container-fluid">
-   <img src= "/users/static/logo.png" >
+   <div class="text-center">
+   <img src= "/users/static/logo.png"  >
+   </div>
+   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+   <div class='text-center text-info'>
+   <p>Presented by Yingzhuo Zhang and Hesong Huang</p>
    </div>
    </body>
 </html>
